Resolves conflicts